--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/public/ddee_logo.webp" />
+    <link rel="icon" href="./ddee_logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="/public/ddee_logo.webp" />
+    <link rel="apple-touch-icon" href="./ddee_logo.webp" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="/src/App.css" />
-    <title>dee's Estate</title>
+    <title>Dee's Estate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
